--- a/pom.xml
+++ b/pom.xml
@@ -101,11 +101,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.12.1</version>
+                <version>3.12.0</version> <!-- Latest version that supports Java 17 -->
                 <configuration>
                     <release>17</release>
                 </configuration>
             </plugin>
+
 
             <plugin>
                 <groupId>org.springframework.boot</groupId>
